07_release/v0.32/03_review_reports/standalone_runtime_test_report.md
# Standalone C++ 运行测试报告

编译器：WSL `g++ -std=c++17 -O2 -pipe -Wall -Wextra -Werror`

- 唯一 standalone 单元：302
- manifest 覆盖单元：80
- 未登记运行用例单元：222
- manifest 过期单元：0
- 编译失败单元：0
- 运行用例数：123
- 运行失败用例：0

## 未登记运行用例（覆盖提示，不代表失败）

这些 standalone 程序已经由编译审计覆盖；组合例题另由 `v02_example_test_report.md` 做样例运行测试。

- `00de6cf57ae3a621` at `04_generated_drafts\v02_examples_worker_G.md#26`
- `026a6b4a9f11cd81` at `04_generated_drafts\v02_examples_worker_E.md#4`
- `05a9945af52e03f9` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#26`
- `0730551bc562f6f4` at `04_generated_drafts\v02_examples_worker_D.md#10`
- `0890021a6149d501` at `04_generated_drafts\v02_examples_worker_F.md#14`
- `0ab81b5f9c1d4497` at `04_generated_drafts\v02_examples_worker_C.md#14`
- `0ad9d0e173d77af0` at `03_modules\STR-05-manacher.md#4`
- `0cfae960febfd8ac` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#24`
- `0e74b989440a305a` at `04_generated_drafts\v02_examples_worker_B.md#1`
- `0f723cc844e7b453` at `04_generated_drafts\v02_examples_worker_E.md#23`
- `0fb0a77ce2fbfbd4` at `04_generated_drafts\v02_examples_worker_C.md#6`
- `1078883cdcb27737` at `04_generated_drafts\v02_examples_worker_E.md#20`
- `10c0b756b8302ec6` at `04_generated_drafts\v02_examples_worker_G.md#39`
- `13480a22333d9147` at `04_generated_drafts\v02_examples_worker_F.md#28`
- `16109dcfbd4c2f8d` at `04_generated_drafts\v02_examples_worker_G.md#58`
- `16417e40d9d947b9` at `04_generated_drafts\v02_examples_worker_D.md#7`
- `181b41e4a0ddc716` at `03_modules\STR-05-manacher.md#3`
- `197e4e734baa949b` at `04_generated_drafts\v02_examples_worker_D.md#3`
- `19c770bedf9467ac` at `04_generated_drafts\v02_examples_worker_G.md#9`
- `1aae030741826370` at `04_generated_drafts\v02_examples_worker_A.md#5`
- `1b4847b35ddf61fa` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#6`
- `1d4f49af8aa25d0b` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#31`
- `1fd2c3684ed734b9` at `04_generated_drafts\v02_examples_worker_A.md#10`
- `23ad4f2f470152c4` at `04_generated_drafts\v02_examples_worker_B.md#2`
- `27f6fc385c47297d` at `04_generated_drafts\v02_examples_worker_G.md#59`
- `296948b295e1b455` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#13`
- `2ad5eb22596ec092` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#29`
- `2b3a9f554cf829e1` at `04_generated_drafts\v02_examples_worker_A.md#24`
- `2b760b61a795d2f9` at `04_generated_drafts\v02_examples_worker_C.md#18`
- `2b97c98022c1fcc6` at `04_generated_drafts\v02_examples_worker_D.md#5`
- `2bc54438483a00d3` at `04_generated_drafts\v02_examples_worker_G.md#42`
- `2d615271a5b55be1` at `04_generated_drafts\v02_examples_worker_D.md#6`
- `2d8ac9f2529daadd` at `04_generated_drafts\v02_examples_worker_G.md#29`
- `2e894c24d77a0506` at `04_generated_drafts\v02_examples_worker_G.md#55`
- `2ea400d4783b47c4` at `04_generated_drafts\v02_examples_worker_C.md#17`
- `2f13d5d0f6c66a64` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#28`
- `321dbbc8e2ca6bf6` at `04_generated_drafts\v02_examples_worker_A.md#19`
- `3253ed71164b2d97` at `04_generated_drafts\v02_examples_worker_E.md#12`
- `3282fc2b980b4e2e` at `04_generated_drafts\v02_examples_worker_E.md#22`
- `330a4521c6a583c7` at `04_generated_drafts\v02_examples_worker_D.md#4`
- `336a4abc6610ff0d` at `04_generated_drafts\v02_examples_worker_G.md#23`
- `37c273f941b551c1` at `04_generated_drafts\v02_examples_worker_G.md#53`
- `3980dd63c4a088dd` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#23`
- `3a0a81ae8e2deca1` at `04_generated_drafts\v02_examples_worker_G.md#46`
- `3b4355c4b04c2e41` at `04_generated_drafts\v02_examples_worker_F.md#20`
- `3b463e821dac92e9` at `04_generated_drafts\v02_examples_worker_B.md#3`
- `3da19888d7698278` at `04_generated_drafts\v02_examples_worker_F.md#10`
- `3e84e85f57b0ebd6` at `04_generated_drafts\v02_examples_worker_A.md#7`
- `3ec1260ea1a8f03c` at `04_generated_drafts\v02_examples_worker_G.md#3`
- `3f2ee23e4f0ffacf` at `04_generated_drafts\v02_examples_worker_G.md#47`
- `3fcdeb42d7ab347e` at `04_generated_drafts\v02_examples_worker_G.md#30`
- `40797044c72604b5` at `04_generated_drafts\v02_examples_worker_E.md#13`
- `40884972f608e27c` at `04_generated_drafts\v02_examples_worker_G.md#16`
- `43204bd957bed415` at `04_generated_drafts\v02_examples_worker_A.md#3`
- `4329e1e1aa9530e9` at `04_generated_drafts\v02_examples_worker_E.md#21`
- `439792cd4c0e664f` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#1`
- `44012eeddeb113d3` at `04_generated_drafts\v02_examples_worker_G.md#13`
- `44fa22e545f0c8da` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#16`
- `457e06fb19efe53a` at `04_generated_drafts\v02_examples_worker_G.md#11`
- `46dbffe1aa55db45` at `04_generated_drafts\v02_examples_worker_G.md#35`
- `48cfa1d12efe2906` at `04_generated_drafts\v02_examples_worker_A.md#14`
- `4a7192606b13d612` at `04_generated_drafts\v02_examples_worker_F.md#16`
- `4b6622b2c1fbe7d4` at `04_generated_drafts\v02_examples_worker_G.md#22`
- `4ca86bda0d1102b0` at `04_generated_drafts\v02_examples_worker_G.md#51`
- `4d2a7e2b2bdffee3` at `04_generated_drafts\v02_examples_worker_G.md#60`
- `4df06a001b9a5ac6` at `04_generated_drafts\v02_examples_worker_G.md#34`
- `4f31a7a9a015411c` at `04_generated_drafts\v02_examples_worker_A.md#4`
- `4fdc4e1de4ee0b97` at `04_generated_drafts\v02_examples_worker_F.md#17`
- `507f948a719413db` at `04_generated_drafts\v02_examples_worker_G.md#37`
- `51d97ab19f45f88d` at `04_generated_drafts\v02_examples_worker_E.md#5`
- `52f3b4f483c6e2bc` at `04_generated_drafts\v02_examples_worker_G.md#24`
- `54543be998948c8c` at `04_generated_drafts\v02_examples_worker_A.md#25`
- `550f491362013863` at `04_generated_drafts\v02_examples_worker_C.md#8`
- `56c30faedee369fa` at `04_generated_drafts\v02_examples_worker_G.md#32`
- `56d5e80e2af3a447` at `04_generated_drafts\v02_examples_worker_G.md#12`
- `58046f677e32cb15` at `04_generated_drafts\v02_examples_worker_F.md#5`
- `582206e0852f9492` at `04_generated_drafts\v02_examples_worker_B.md#7`
- `58ae3bda2a430f95` at `04_generated_drafts\v02_examples_worker_G.md#38`
- `59a72715b7c8b5cd` at `04_generated_drafts\v02_examples_worker_C.md#3`
- `5b34d5d06e1a2fdf` at `04_generated_drafts\v02_examples_worker_F.md#27`
- `5b4445f65c15b26f` at `04_generated_drafts\v02_examples_worker_E.md#2`
- `5b95c4261fc7cc1a` at `04_generated_drafts\v02_examples_worker_F.md#26`
- `5c9020ff6a5c3f6c` at `04_generated_drafts\v02_examples_worker_G.md#44`
- `5d864fd3caf514bd` at `04_generated_drafts\v02_examples_worker_C.md#7`
- `5d93171af92f87b3` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#32`
- `5fc7352765d1830b` at `04_generated_drafts\v02_examples_worker_B.md#9`
- `60e8445dc9d5b6d7` at `04_generated_drafts\v02_examples_worker_A.md#26`
- `625a98548de32cc9` at `04_generated_drafts\v02_examples_worker_F.md#7`
- `641941673ece09df` at `04_generated_drafts\v02_examples_worker_A.md#28`
- `6421c6f9ff6e4d5f` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#22`
- `65caf526be0776be` at `04_generated_drafts\v02_examples_worker_E.md#11`
- `666ab5babd901521` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#30`
- `66826ed9798fc47c` at `04_generated_drafts\v02_examples_worker_E.md#19`
- `67241151a613f16e` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#19`
- `69319f029c8635b3` at `04_generated_drafts\v02_examples_worker_F.md#8`
- `69b73cedaaba59a1` at `04_generated_drafts\v02_examples_worker_G.md#5`
- `69d4e8aad02e641c` at `04_generated_drafts\v02_examples_worker_E.md#15`
- `6a273c6a5fa6d03a` at `04_generated_drafts\v02_examples_worker_F.md#13`
- `6be00ef39a29ed76` at `04_generated_drafts\v02_examples_worker_A.md#22`
- `6c79efa8929845c2` at `04_generated_drafts\v02_examples_worker_G.md#6`
- `6d852428acc2ed15` at `04_generated_drafts\v02_examples_worker_B.md#5`
- `6ef7c83e494b1d4a` at `04_generated_drafts\v02_examples_worker_G.md#20`
- `6f6fde8ad328e705` at `04_generated_drafts\v02_examples_worker_E.md#14`
- `6f7c2241fd5ba66a` at `04_generated_drafts\v02_examples_worker_A.md#27`
- `71941ac15d71c0f1` at `04_generated_drafts\v02_examples_worker_A.md#17`
- `736b3b57f9b37f68` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#33`
- `73a94d59476b63b7` at `04_generated_drafts\v02_examples_worker_A.md#2`
- `746c8b9c5569f1fc` at `04_generated_drafts\v02_examples_worker_E.md#6`
- `764349320e64a59a` at `04_generated_drafts\v02_examples_worker_B.md#10`
- `771f006525dd78d2` at `04_generated_drafts\v02_examples_worker_C.md#13`
- `78fdab62e40c0209` at `04_generated_drafts\v02_examples_worker_G.md#15`
- `798bc6b4c17d067e` at `04_generated_drafts\v02_examples_worker_G.md#49`
- `7a03c80b4494a7ea` at `04_generated_drafts\v02_examples_worker_G.md#43`
- `7aa41115e1b7ff20` at `04_generated_drafts\v02_examples_worker_D.md#12`
- `7b0165347f661697` at `04_generated_drafts\v02_examples_worker_G.md#19`
- `7bc27d3c6506a606` at `04_generated_drafts\v02_examples_worker_F.md#30`
- `7fc3b1714815ece9` at `04_generated_drafts\v02_examples_worker_G.md#36`
- `814a87812691409b` at `04_generated_drafts\v02_examples_worker_G.md#2`
- `834f04ab005a3729` at `04_generated_drafts\v02_examples_worker_C.md#4`
- `8435cd17284c3a6b` at `04_generated_drafts\v02_examples_worker_G.md#4`
- `84ce95a192f88d87` at `04_generated_drafts\v02_examples_worker_F.md#29`
- `878fe07794bec98a` at `04_generated_drafts\v02_examples_worker_G.md#21`
- `89777a9cc6ba7467` at `04_generated_drafts\v02_examples_worker_B.md#4`
- `8a09be6ac1020588` at `04_generated_drafts\v02_examples_worker_F.md#2`
- `8a1c872594dc017a` at `04_generated_drafts\v02_examples_worker_D.md#11`
- `8bc5dcb5b0ba6831` at `04_generated_drafts\v02_examples_worker_D.md#13`
- `8ce0f53023444802` at `04_generated_drafts\v02_examples_worker_F.md#25`
- `8e6cb61833539671` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#20`
- `8e848c583a0e7360` at `04_generated_drafts\v02_examples_worker_A.md#11`
- `8f19a92cca0061a0` at `04_generated_drafts\v02_examples_worker_A.md#21`
- `8fd4f078a26fe036` at `04_generated_drafts\v02_examples_worker_E.md#18`
- `90711f4265b9eaa4` at `04_generated_drafts\v02_examples_worker_G.md#1`
- `91e825bd736d45d3` at `04_generated_drafts\v02_examples_worker_G.md#27`
- `932b719eb8198285` at `04_generated_drafts\v02_examples_worker_E.md#8`
- `93e5c18b745d7a91` at `04_generated_drafts\v02_examples_worker_E.md#24`
- `93e8e9db6dc953e2` at `04_generated_drafts\v02_examples_worker_C.md#19`
- `95f390eaa76f08eb` at `04_generated_drafts\v02_examples_worker_G.md#54`
- `96cd86ddc8c63e01` at `04_generated_drafts\v02_examples_worker_F.md#22`
- `98da311e74e86b9a` at `04_generated_drafts\v02_examples_worker_G.md#56`
- `99641fcaa02c6724` at `04_generated_drafts\v02_examples_worker_C.md#10`
- `9bec5a34e92f7e33` at `03_modules\STR-04-ac-automaton-low-priority.md#3`
- `9c1de4726248f656` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#14`
- `9c65ae7472ee61e4` at `04_generated_drafts\v02_examples_worker_G.md#41`
- `9c7a2741a4310158` at `04_generated_drafts\v02_examples_worker_A.md#29`
- `9feceecd90e163e8` at `04_generated_drafts\v02_examples_worker_D.md#9`
- `a04c189289cd7f2b` at `04_generated_drafts\v02_examples_worker_D.md#15`
- `a0ab36618c10ae50` at `04_generated_drafts\v02_examples_worker_G.md#7`
- `a45fcf793992c63b` at `04_generated_drafts\v02_examples_worker_C.md#11`
- `a4633e14c4c94582` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#18`
- `a47010da019ba62b` at `04_generated_drafts\v02_examples_worker_C.md#20`
- `a480c19f3e8618e7` at `04_generated_drafts\v02_examples_worker_F.md#24`
- `a4b56297271d4d6b` at `04_generated_drafts\v02_examples_worker_F.md#12`
- `a58c24651b9e860a` at `04_generated_drafts\v02_examples_worker_F.md#15`
- `a740b348165147e7` at `04_generated_drafts\v02_examples_worker_C.md#5`
- `a7f886b8ae2f24b2` at `04_generated_drafts\v02_examples_worker_A.md#23`
- `a8f4fd317f85c469` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#3`
- `ab8c87a975ffe73a` at `04_generated_drafts\v02_examples_worker_A.md#12`
- `ae724e1349699caf` at `04_generated_drafts\v02_examples_worker_F.md#11`
- `af00c17bb2638f3a` at `04_generated_drafts\v02_examples_worker_E.md#7`
- `afff87795b650a3e` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#17`
- `b009734440f7993e` at `04_generated_drafts\v02_examples_worker_B.md#8`
- `b0110cff406a8660` at `04_generated_drafts\v02_examples_worker_A.md#30`
- `b0146ae6c1fc02b2` at `04_generated_drafts\v02_examples_worker_G.md#40`
- `b18b327c6dd3e168` at `04_generated_drafts\v02_examples_worker_E.md#10`
- `b2ae0733bcb8a237` at `04_generated_drafts\v02_examples_worker_G.md#17`
- `b4174c112be4916f` at `04_generated_drafts\v02_examples_worker_D.md#14`
- `b4e0b9aae407c1b3` at `04_generated_drafts\v02_examples_worker_F.md#9`
- `b508b48c3e9fcbdd` at `04_generated_drafts\v02_examples_worker_E.md#9`
- `b559213cd890e641` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#2`
- `b67ea4452b0d6447` at `04_generated_drafts\v02_examples_worker_A.md#16`
- `b7827dafb688776d` at `04_generated_drafts\v02_examples_worker_G.md#45`
- `b7f0a1715a587cb4` at `04_generated_drafts\v02_examples_worker_A.md#9`
- `b8467364fad96645` at `04_generated_drafts\v02_examples_worker_F.md#18`
- `b8da00ec0b21935f` at `04_generated_drafts\v02_examples_worker_C.md#15`
- `b976ff69ef78a927` at `04_generated_drafts\v02_examples_worker_G.md#10`
- `baf0e827c8730042` at `04_generated_drafts\v02_examples_worker_F.md#4`
- `bcccae890ad350ff` at `04_generated_drafts\v02_examples_worker_C.md#12`
- `bda72d296589189f` at `04_generated_drafts\v02_examples_worker_F.md#19`
- `be7fc8f26cbdcfb4` at `04_generated_drafts\v02_examples_worker_D.md#8`
- `bf26d67eb83f7fa0` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#7`
- `bf89fd38d2840489` at `04_generated_drafts\v02_examples_worker_C.md#9`
- `c0d080eed2f4e4bc` at `04_generated_drafts\v02_examples_worker_A.md#18`
- `c2471d931cbc546e` at `04_generated_drafts\v02_examples_worker_A.md#13`
- `c2ec0716af4cd536` at `04_generated_drafts\v02_examples_worker_A.md#15`
- `cdc5a7d4ef67493d` at `04_generated_drafts\v02_examples_worker_G.md#48`
- `ce70c4e5c129b192` at `04_generated_drafts\v02_examples_worker_A.md#6`
- `cef38a9dd49b283e` at `04_generated_drafts\v02_examples_worker_E.md#3`
- `d0cc8a8f2d661535` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#21`
- `d1e85031531f84ab` at `04_generated_drafts\v02_examples_worker_D.md#1`
- `d25501cb3204b803` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#10`
- `d40f5b4e4002bab7` at `04_generated_drafts\v02_examples_worker_A.md#20`
- `d4420808c83abf0c` at `04_generated_drafts\v02_examples_worker_F.md#1`
- `d64e7db26c4d1c07` at `04_generated_drafts\v02_examples_worker_B.md#6`
- `d64f7106c8d8eb16` at `04_generated_drafts\v02_examples_worker_A.md#1`
- `d8a4d4e772e19d4b` at `04_generated_drafts\v02_examples_worker_G.md#25`
- `d8d4263598b33604` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#12`
- `d9ee83c7b0cd8111` at `04_generated_drafts\v02_examples_worker_C.md#16`
- `daed940f1d931890` at `04_generated_drafts\v02_examples_worker_G.md#33`
- `db56da37d96be770` at `04_generated_drafts\v02_examples_worker_G.md#57`
- `dbea38b671125149` at `04_generated_drafts\v02_examples_worker_G.md#50`
- `dcd1cf7f78567682` at `04_generated_drafts\v02_examples_worker_F.md#23`
- `e1e0d03936c38a58` at `04_generated_drafts\v02_examples_worker_G.md#31`
- `e59395d656520b3c` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#9`
- `e594f2339e49685a` at `04_generated_drafts\v02_examples_worker_F.md#3`
- `e788dec5fa0cbab8` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#25`
- `e99294617aa72c80` at `04_generated_drafts\v02_examples_worker_C.md#1`
- `ed466a03833819d8` at `04_generated_drafts\v02_examples_worker_C.md#2`
- `ed8fa4b5e36d4f37` at `04_generated_drafts\v02_examples_worker_E.md#1`
- `ee681c9d2c49908f` at `04_generated_drafts\v02_examples_worker_G.md#14`
- `ee7a2129c3b65a1a` at `04_generated_drafts\v02_examples_worker_F.md#21`
- `f2aa45160795a970` at `04_generated_drafts\v02_examples_worker_G.md#52`
- `f2aaf1b79be31b98` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#5`
- `f4d06a11b63e60e9` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#27`
- `f4d7c58a2f569cf7` at `04_generated_drafts\v02_examples_worker_G.md#8`
- `f849f91deb54548f` at `04_generated_drafts\v02_examples_worker_E.md#16`
- `f90f8cd06a8bfe33` at `04_generated_drafts\v02_examples_worker_D.md#2`
- `fa09bf79d22a9cce` at `04_generated_drafts\v02_examples_worker_F.md#6`
- `fac8985b43fe4c2f` at `04_generated_drafts\v02_examples_worker_E.md#17`
- `fb3622db64780086` at `04_generated_drafts\v02_examples_worker_G.md#18`
- `ff5b62d8c23dc0b9` at `04_generated_drafts\v02_examples_worker_G.md#28`
- `ff6ba64a8a89d7e1` at `04_generated_drafts\v02_examples_worker_A.md#8`
- `fff32f4a48842cef` at `04_generated_drafts\12_zhongguancun_machine_exam_companion.md#4`

## 用例结果

| 状态 | digest | 首个位置 | 用例 | 期望 stdout | 实际 stdout | stderr | 细节 |
|---|---|---|---|---|---|---|---|
| OK | `01c9e61d0f2870e6` | `03_modules\BRUTE-00-partial-score-strategy.md#2` | small-subset-max-sum | 5<br> | 5<br> |  | compare=trim |
| OK | `051ff8480d08eeff` | `03_modules\DP-25-dfs-memo-case-strategy.md#2` | p1874-leading-zero | 1<br> | 1<br> |  | compare=trim |
| OK | `051ff8480d08eeff` | `03_modules\DP-25-dfs-memo-case-strategy.md#2` | p1874-sample | 4<br> | 4<br> |  | compare=trim |
| OK | `055db34c49dc9417` | `03_modules\AI-08-neural-forward-softmax.md#2` | neural-softmax-forward | 2<br>0.268941 0.731059<br> | 2<br>0.268941 0.731059<br> |  | compare=trim |
| OK | `07c709f3fcd11b60` | `03_modules\DP-26-aftereffect-state-augmentation.md#2` | stairs-no-same-jump | 1<br> | 1<br> |  | compare=trim |
| OK | `0f38fdd27313e655` | `03_modules\AI-00-ai-topic-routing.md#2` | ai-topic-routing-basic | AI-02<br>AI-01 / GRAPH<br>SIM-04/05<br>ROUTE<br> | AI-02<br>AI-01 / GRAPH<br>SIM-04/05<br>ROUTE<br> |  | compare=trim |
| OK | `1ad4d11e62cbbad8` | `03_modules\DP-26-aftereffect-state-augmentation.md#1` | grid-no-two-down | 103<br> | 103<br> |  | compare=trim |
| OK | `1adbd0e5a648ced0` | `03_modules\CPP-002-basic-containers.md#1` | basic-vector-string-set-map | a 5 1<br>1 3 5<br> | a 5 1<br>1 3 5<br> |  | compare=trim |
| OK | `1c101394c2f5ed6a` | `03_modules\CPP-011-string-reference.md#13` | getline-after-cin | hello world<br><br>abc<br> | hello world<br><br>abc<br> |  | compare=exact |
| OK | `1d8243b826ef0d6a` | `03_modules\SIGN-ARCH-02-number-memory-representation.md#7` | arch-endian-current-wsl | 78 56 34 12<br> | 78 56 34 12<br> |  | compare=trim |
| OK | `1f822dce878d85c6` | `03_modules\BRUTE-10-unordered-map-encoded-memo.md#2` | encoded-memo-knapsack | 12<br> | 12<br> |  | compare=trim |
| OK | `27a4b9aa46fd891d` | `03_modules\BRUTE-11-bfs-state-search.md#2` | grid-bfs-missing-start | -1<br> | -1<br> |  | compare=trim |
| OK | `27a4b9aa46fd891d` | `03_modules\BRUTE-11-bfs-state-search.md#2` | grid-bfs-shortest | 4<br> | 4<br> |  | compare=trim |
| OK | `299dfbdadb4c257c` | `03_modules\SIM-05-mini-interpreter.md#2` | mini-interpreter-if-expression | -14<br>1<br>1<br> | -14<br>1<br>1<br> |  | compare=trim |
| OK | `299dfbdadb4c257c` | `03_modules\SIM-05-mini-interpreter.md#2` | mini-interpreter-unary-loop | 3<br>2<br>1<br>99<br> | 3<br>2<br>1<br>99<br> |  | compare=trim |
| OK | `299dfbdadb4c257c` | `03_modules\SIM-05-mini-interpreter.md#2` | mini-interpreter-while-sum | 15<br> | 15<br> |  | compare=trim |
| OK | `32441dd9c24c002c` | `03_modules\SIGN-NOIP-02-reading-program-flowchart.md#6` | noip-pass-by-value-and-reference | 5<br>6<br> | 5<br>6<br> |  | compare=trim |
| OK | `32e5bf60cf97acc2` | `03_modules\AI-05-text-tfidf-tokenizer.md#2` | tfidf-basic-query | 1 0.707107<br> | 1 0.707107<br> |  | compare=trim |
| OK | `39274914cba6a620` | `03_modules\AI-13-linear-regression-gd.md#2` | linear-regression-one-step | 8.000000<br> | 8.000000<br> |  | compare=trim |
| OK | `3a8d8143342b8584` | `03_modules\AI-14-backpropagation.md#2` | backprop-one-sample | 0.531209<br> | 0.531209<br> |  | compare=trim |
| OK | `3cedd7940a545415` | `03_modules\BRUTE-08-vector-memo.md#2` | vector-memo-knapsack | 7<br> | 7<br> |  | compare=trim |
| OK | `467d068c421f7a6b` | `03_modules\AI-12-dnn-multilayer-forward.md#2` | dnn-two-layer-softmax | 2<br>0.268941 0.731059<br> | 2<br>0.268941 0.731059<br> |  | compare=trim |
| OK | `488b1158614acb00` | `03_modules\BRUTE-07-memoized-search-overview.md#2` | memoized-search-knapsack | 20<br> | 20<br> |  | compare=trim |
| OK | `51926829dc31cbea` | `03_modules\BASIC-00-control-flow.md#2` | control-flow-basic | POSITIVE<br>8 2 7 4<br> | POSITIVE<br>8 2 7 4<br> |  | compare=trim |
| OK | `540c6428ad5db715` | `03_modules\AI-11-linear-svm.md#2` | linear-svm-one-epoch | 1<br>-1<br>1<br> | 1<br>-1<br>1<br> |  | compare=trim |
| OK | `5427ab3d040ece05` | `03_modules\CPP-10-io-formatting.md#8` | read-case-eof-two-cases | 6<br>9<br> | 6<br>9<br> |  | compare=trim |
| OK | `592e23f56dc29d30` | `03_modules\DP-26-aftereffect-state-augmentation.md#4` | grid-one-double | 24<br> | 24<br> |  | compare=trim |
| OK | `599f09a35e616c8b` | `03_modules\AI-07-markov-viterbi.md#2` | viterbi-basic-path | 0.025920<br>1 2 2<br> | 0.025920<br>1 2 2<br> |  | compare=trim |
| OK | `5d7eeeef5174b1d8` | `03_modules\BRUTE-04-combination-dfs.md#2` | combination-dfs | 8<br> | 8<br> |  | compare=trim |
| OK | `5e25069cef2c32b1` | `03_modules\DP-26-aftereffect-state-augmentation.md#3` | choose-k-no-adjacent | 11<br> | 11<br> |  | compare=trim |
| OK | `5e7daf91f78df095` | `03_modules\SIM-06-date-time-calendar.md#2` | date-add-leap-year | 2024-03-01<br> | 2024-03-01<br> |  | compare=trim |
| OK | `5e7daf91f78df095` | `03_modules\SIM-06-date-time-calendar.md#2` | date-diff-leap-year | 2<br> | 2<br> |  | compare=trim |
| OK | `5e7daf91f78df095` | `03_modules\SIM-06-date-time-calendar.md#2` | date-weekday-epoch | Thu<br> | Thu<br> |  | compare=trim |
| OK | `5e7daf91f78df095` | `03_modules\SIM-06-date-time-calendar.md#2` | historical-jdn-after-switch | 2299161<br> | 2299161<br> |  | compare=trim |
| OK | `5e7daf91f78df095` | `03_modules\SIM-06-date-time-calendar.md#2` | historical-jdn-before-switch | 2299160<br> | 2299160<br> |  | compare=trim |
| OK | `5e7daf91f78df095` | `03_modules\SIM-06-date-time-calendar.md#2` | timezone-conversion | 2026-05-17 20:30:00<br> | 2026-05-17 20:30:00<br> |  | compare=trim |
| OK | `5eb82e3322be093a` | `03_modules\CPP-005-associative-containers.md#1` | map-set-count-query | 3<br>5<br>0<br> | 3<br>5<br>0<br> |  | compare=trim |
| OK | `61c5574f2e28713c` | `03_modules\TREE-00-binary-tree.md#3` | preorder-inorder-rebuild | 4 5 2 3 1<br> | 4 5 2 3 1 <br> |  | compare=trim |
| OK | `62b379d2374502e7` | `03_modules\BRUTE-13-small-exact-large-special.md#2` | small-exact-large-special-small | 7<br> | 7<br> |  | compare=trim |
| OK | `642890091a7b1d5b` | `03_modules\TREE-00-binary-tree.md#2` | binary-tree-traversals | 1 2 4 5 3<br>4 2 5 1 3<br>4 5 2 3 1<br> | 1 2 4 5 3<br>4 2 5 1 3<br>4 5 2 3 1<br> |  | compare=trim |
| OK | `6629aae4070f2a35` | `03_modules\DIVIDE-00-divide-and-conquer.md#3` | merge-sort-inversion | 9<br> | 9<br> |  | compare=trim |
| OK | `6b9343b6c810d874` | `03_modules\AI-01-search-planning-game-ai.md#2` | astar-grid-basic | 5<br> | 5<br> |  | compare=trim |
| OK | `6b9343b6c810d874` | `03_modules\AI-01-search-planning-game-ai.md#2` | astar-grid-missing-target | -1<br> | -1<br> |  | compare=trim |
| OK | `6be01ef1d7f4fdc4` | `03_modules\SIM-01-high-precision.md#2` | bigint-add | 1000<br> | 1000<br> |  | compare=trim |
| OK | `6be01ef1d7f4fdc4` | `03_modules\SIM-01-high-precision.md#2` | bigint-cmp-leading-zero | 1<br> | 1<br> |  | compare=trim |
| OK | `6be01ef1d7f4fdc4` | `03_modules\SIM-01-high-precision.md#2` | bigint-mul-negative | -5535<br> | -5535<br> |  | compare=trim |
| OK | `6be01ef1d7f4fdc4` | `03_modules\SIM-01-high-precision.md#2` | bigint-sub-negative | -999<br> | -999<br> |  | compare=trim |
| OK | `6d99ab110fe7247b` | `03_modules\CPP-008-integers-overflow.md#1` | overflow-and-int128 | OVER<br>1000000000000000000000000<br>500000000000000000<br> | OVER<br>1000000000000000000000000<br>500000000000000000<br> |  | compare=trim |
| OK | `6f81cae2cda4a848` | `03_modules\CPP-007-coordinate-compression.md#1` | coordinate-compression | 2 1 2 3 1<br>2<br> | 2 1 2 3 1<br>2<br> |  | compare=trim |
| OK | `74e15f1713240e16` | `03_modules\BRUTE-06-backtracking-pruning.md#2` | backtracking-pruning-knapsack | 20<br> | 20<br> |  | compare=trim |
| OK | `77e56bfbb759bd89` | `03_modules\SIGN-MARKOV-01-markov-property.md#5` | markov-power-ten-steps | 0.285719 0.714281<br> | 0.285719 0.714281<br> |  | compare=trim |
| OK | `77e56bfbb759bd89` | `03_modules\SIGN-MARKOV-01-markov-property.md#5` | markov-stationary-iter | 0.285714 0.714286<br> | 0.285714 0.714286<br> |  | compare=trim |
| OK | `77e56bfbb759bd89` | `03_modules\SIGN-MARKOV-01-markov-property.md#5` | markov-step-two-steps | 0.350000 0.650000<br> | 0.350000 0.650000<br> |  | compare=trim |
| OK | `84056bb6acc6aa38` | `03_modules\DP-26-aftereffect-state-augmentation.md#5` | stock-cooldown | 3<br> | 3<br> |  | compare=trim |
| OK | `86b0ca20dfad77a7` | `03_modules\CPP-10-io-formatting.md#3` | cin-cout-sum | 60<br> | 60<br> |  | compare=trim |
| OK | `86fe4694481b95cb` | `03_modules\BRUTE-01-complexity-cheatsheet.md#2` | complexity-cheatsheet-safe | very_safe<br> | very_safe<br> |  | compare=trim |
| OK | `87ec31d9b06a1259` | `03_modules\CPP-003-sort-bounds.md#1` | sort-and-bounds | 2<br>2<br> | 2<br>2<br> |  | compare=trim |
| OK | `8b171cea69b64cb6` | `03_modules\CPP-012-stl-algorithms-reference.md#42` | stl-algorithm-ranges | 3<br>1<br> | 3<br>1<br> |  | compare=trim |
| OK | `8c66425763d65262` | `03_modules\SIM-03-expression-ast.md#2` | expression-ast-negative-division-mod | 47<br>13<br>+ + / x y % x y * z + 2 3<br>x y / x y % + z 2 3 + * +<br> | 47<br>13<br>+ + / x y % x y * z + 2 3<br>x y / x y % + z 2 3 + * +<br> |  | compare=trim |
| OK | `8c66425763d65262` | `03_modules\SIM-03-expression-ast.md#2` | expression-ast-sample | -46<br>10<br>+ * neg + a 3 b / 20 3<br>a 3 + neg b * 20 3 / +<br> | -46<br>10<br>+ * neg + a 3 b / 20 3<br>a 3 + neg b * 20 3 / +<br> |  | compare=trim |
| OK | `8c66425763d65262` | `03_modules\SIM-03-expression-ast.md#2` | expression-ast-unary-number-only | 11<br>8<br>- + 1 * 2 3 neg 4<br>1 2 3 * + 4 neg -<br> | 11<br>8<br>- + 1 * 2 3 neg 4<br>1 2 3 * + 4 neg -<br> |  | compare=trim |
| OK | `8d2abc021eeff895` | `03_modules\BRUTE-14-submission-version-route.md#2` | submission-route-small | 3<br> | 3<br> |  | compare=trim |
| OK | `93a9c5b58419d16f` | `03_modules\DP-21-p1874-modeling-example.md#3` | p1874-bottom-up-leading-zero | 1<br> | 1<br> |  | compare=trim |
| OK | `93a9c5b58419d16f` | `03_modules\DP-21-p1874-modeling-example.md#3` | p1874-bottom-up-sample | 4<br> | 4<br> |  | compare=trim |
| OK | `98a2b9c85a0f49c3` | `03_modules\AI-02-lightweight-ml-classification.md#2` | knn-classification-basic | 1<br>2<br>1<br> | 1<br>2<br>1<br> |  | compare=trim |
| OK | `9a12f6e7ef2a7f86` | `03_modules\BRUTE-12-meet-in-the-middle.md#2` | meet-in-middle-no-positive-fit | 0<br> | 0<br> |  | compare=trim |
| OK | `9a12f6e7ef2a7f86` | `03_modules\BRUTE-12-meet-in-the-middle.md#2` | meet-in-middle-subset-sum | 10<br> | 10<br> |  | compare=trim |
| OK | `9b81af8a5e974820` | `03_modules\SIGN-SIM-01-life-simulation-templates.md#1` | sign-base-hex-to-decimal | 255<br> | 255<br> |  | compare=trim |
| OK | `9b81af8a5e974820` | `03_modules\SIGN-SIM-01-life-simulation-templates.md#1` | sign-binary-metrics | 0.600000 0.666667 0.666667 0.666667<br> | 0.600000 0.666667 0.666667 0.666667<br> |  | compare=trim |
| OK | `9b81af8a5e974820` | `03_modules\SIGN-SIM-01-life-simulation-templates.md#1` | sign-bmi-centimeter | 22.857143<br> | 22.857143<br> |  | compare=trim |
| OK | `9b81af8a5e974820` | `03_modules\SIGN-SIM-01-life-simulation-templates.md#1` | sign-bmp-row-align-24bit | 24<br> | 24<br> |  | compare=trim |
| OK | `9b81af8a5e974820` | `03_modules\SIGN-SIM-01-life-simulation-templates.md#1` | sign-date-diff-leap-year | 2<br> | 2<br> |  | compare=trim |
| OK | `9b81af8a5e974820` | `03_modules\SIGN-SIM-01-life-simulation-templates.md#1` | sign-excel-col-to-num | 27<br> | 27<br> |  | compare=trim |
| OK | `9b81af8a5e974820` | `03_modules\SIGN-SIM-01-life-simulation-templates.md#1` | sign-excel-num-to-col | AAA<br> | AAA<br> |  | compare=trim |
| OK | `9b81af8a5e974820` | `03_modules\SIGN-SIM-01-life-simulation-templates.md#1` | sign-triangle-heron-345 | 6.000000<br> | 6.000000<br> |  | compare=trim |
| OK | `9becfcd0c0bcf86b` | `03_modules\CPP-013-stl-containers-reference.md#11` | priority-queue-struct-order | 2 2<br>5 1<br>5 3<br> | 2 2<br>5 1<br>5 3<br> |  | compare=trim |
| OK | `ad1d8c9470ecb672` | `03_modules\CPP-001-main-io.md#3` | main-io-sum | 60<br> | 60<br> |  | compare=trim |
| OK | `af75600658959899` | `03_modules\GREEDY-00-routing.md#2` | greedy-routing-non-touching | 2<br>2<br> | 2<br>2<br> |  | compare=trim |
| OK | `afbd39e47b424bb0` | `03_modules\DP-25-dfs-memo-case-strategy.md#3` | edit-distance-memo-sample | 4<br> | 4<br> |  | compare=trim |
| OK | `b1c9b8d6d7daa712` | `03_modules\AI-09-reinforcement-learning-mdp.md#2` | mdp-value-iteration-basic | 5.000000 5.000000 0.000000<br> | 5.000000 5.000000 0.000000<br> |  | compare=trim |
| OK | `b4314b0a81030edc` | `03_modules\CPP-011-string-reference.md#27` | string-reference-full | ABRA<br>1<br>one<br>two<br>three<br>124 1234567890123<br> | ABRA<br>1<br>one<br>two<br>three<br>124 1234567890123<br> |  | compare=trim |
| OK | `b8db89ddce36889a` | `03_modules\AI-10-special-judge-model-strategy.md#2` | spj-binary-f1 | 0.666667<br> | 0.666667<br> |  | compare=trim |
| OK | `beee3d6beb1041d1` | `03_modules\SIGN-AI-03-modern-ai-terms.md#2` | modern-ai-topk-cosine | 1 3<br> | 1 3<br> |  | compare=trim |
| OK | `bfa75b9e3eb81264` | `03_modules\CPP-006-bitset-bit-operations.md#1` | bitset-and-bit-ops | 1<br>1<br> | 1<br>1<br> |  | compare=trim |
| OK | `bfa75b9e3eb81264` | `03_modules\CPP-006-bitset-bit-operations.md#1` | negative-odd-count | 1<br>1<br> | 1<br>1<br> |  | compare=trim |
| OK | `c1044a5f3d99f0ab` | `03_modules\BRUTE-02-legal-fallback-output.md#2` | legal-fallback-output | 0<br> | 0<br> |  | compare=trim |
| OK | `c2d71fab2662c8cd` | `03_modules\BRUTE-03-permutation-enumeration.md#2` | permutation-enumeration | 14<br> | 14<br> |  | compare=trim |
| OK | `c33a1ecce6e36d27` | `03_modules\AI-03-similarity-recommendation-text.md#2` | ai-confusion-matrix | 0.600000<br>1 1 0<br>0 1 0<br>1 0 1<br> | 0.600000<br>1 1 0<br>0 1 0<br>1 0 1<br> |  | compare=trim |
| OK | `c33a1ecce6e36d27` | `03_modules\AI-03-similarity-recommendation-text.md#2` | ai-similarity-cosine | 0.500000<br> | 0.500000<br> |  | compare=trim |
| OK | `c33a1ecce6e36d27` | `03_modules\AI-03-similarity-recommendation-text.md#2` | ai-similarity-jaccard | 0.400000<br> | 0.400000<br> |  | compare=trim |
| OK | `c365f7527afbba06` | `03_modules\DP-22-edit-distance-modeling-example.md#7` | edit-distance-bottom-up-sample | 4<br> | 4<br> |  | compare=trim |
| OK | `c489a78ea6444778` | `03_modules\DS-05-advanced-segtree.md#3` | persistent-segtree-kth | 3<br>1<br>-1<br> | 3<br>1<br>-1<br> |  | compare=trim |
| OK | `ca43debfb1c08a5e` | `03_modules\SIGN-NOIP-02-reading-program-flowchart.md#13` | noip-trace-branch-loop | 41<br> | 41<br> |  | compare=trim |
| OK | `ce6a029d246fb05c` | `03_modules\AI-06-clustering-regression.md#2` | kmeans-two-clusters | 1 1 2 2<br>0.500000<br>10.500000<br> | 1 1 2 2<br>0.500000<br>10.500000<br> |  | compare=trim |
| OK | `cecc59722c27aa2f` | `03_modules\DIVIDE-00-divide-and-conquer.md#4` | binary-lifting-bit60 | 0<br> | 0<br> |  | compare=trim |
| OK | `cecc59722c27aa2f` | `03_modules\DIVIDE-00-divide-and-conquer.md#4` | binary-lifting-jump-small | 3<br>3<br>3<br> | 3<br>3<br>3<br> |  | compare=trim |
| OK | `cfffd91923e6db43` | `03_modules\BRUTE-05-subset-enumeration.md#2` | subset-positive-and-negative | 5<br> | 5<br> |  | compare=trim |
| OK | `cfffd91923e6db43` | `03_modules\BRUTE-05-subset-enumeration.md#2` | subset-too-large-fallback | 0<br> | 0<br> |  | compare=trim |
| OK | `d60255e3054ea5d7` | `03_modules\SIM-04-json-csv-ini-parsers.md#2` | format-parser-csv-quotes | 3<br>row 1 cols 3<br>[1,1]=name<br>[1,2]=score<br>[1,3]=note<br>row 2 cols 3<br>[2,1]=Alice<br>[2,2]=10<br>[2,3]=hello,world<br>row 3 cols 3<br>[3,1]=Bob<br>[3,2]=20<br>[3,3]=a "quote"<br> | 3<br>row 1 cols 3<br>[1,1]=name<br>[1,2]=score<br>[1,3]=note<br>row 2 cols 3<br>[2,1]=Alice<br>[2,2]=10<br>[2,3]=hello,world<br>row 3 cols 3<br>[3,1]=Bob<br>[3,2]=20<br>[3,3]=a "quote"<br> |  | compare=trim |
| OK | `d60255e3054ea5d7` | `03_modules\SIM-04-json-csv-ini-parsers.md#2` | format-parser-ini-sections | 4<br>global.name=root<br>db.host=localhost<br>db.port=3306<br>feature.enabled=true<br> | 4<br>global.name=root<br>db.host=localhost<br>db.port=3306<br>feature.enabled=true<br> |  | compare=trim |
| OK | `d60255e3054ea5d7` | `03_modules\SIM-04-json-csv-ini-parsers.md#2` | format-parser-json-leaves | 8 5<br>$.b[1]=true<br>$.b[2]=null<br>$.b[3]="x"<br>$.a.n=-12<br>$.a.s="hi\\n"<br> | 8 5<br>$.b[1]=true<br>$.b[2]=null<br>$.b[3]="x"<br>$.a.n=-12<br>$.a.s="hi\\n"<br> |  | compare=trim |
| OK | `d60255e3054ea5d7` | `03_modules\SIM-04-json-csv-ini-parsers.md#2` | format-parser-json-unicode-escape | 2 1<br>$.s="A中"<br> | 2 1<br>$.s="A中"<br> |  | compare=trim |
| OK | `dc80eddee79f8385` | `03_modules\SIM-02-big-integer-class.md#2` | bigint-class-core-ops | 1000<br>-999<br>-5535<br>142<br>-6<br>-142<br>6<br>1<br>1<br>1<br>0<br>0<br>-1<br>12345<br>1<br>1<br>0<br>0<br> | 1000<br>-999<br>-5535<br>142<br>-6<br>-142<br>6<br>1<br>1<br>1<br>0<br>0<br>-1<br>12345<br>1<br>1<br>0<br>0<br> |  | compare=trim |
| OK | `dc80eddee79f8385` | `03_modules\SIM-02-big-integer-class.md#2` | bigint-class-large-ops | 1111111111111111110<br>999999999999999999999999<br>121932631112635269<br>987654321<br>0<br>999999999999999998000000000000000001<br>100000000000000000000000000000<br>0<br> | 1111111111111111110<br>999999999999999999999999<br>121932631112635269<br>987654321<br>0<br>999999999999999998000000000000000001<br>100000000000000000000000000000<br>0<br> |  | compare=trim |
| OK | `dc80eddee79f8385` | `03_modules\SIM-02-big-integer-class.md#2` | bigint-class-sign-division | -2<br>-1<br>-2<br>1<br>2<br>-1<br>1<br>0<br>1<br>-100<br>146<br>1<br> | -2<br>-1<br>-2<br>1<br>2<br>-1<br>1<br>0<br>1<br>-100<br>146<br>1<br> |  | compare=trim |
| OK | `de8812f22a7da1b2` | `03_modules\SIM-07-equation-solving.md#2` | equation-linear-congruence | 45 50<br> | 45 50<br> |  | compare=trim |
| OK | `de8812f22a7da1b2` | `03_modules\SIM-07-equation-solving.md#2` | equation-mod-gauss-unique | UNIQUE<br>2 1<br> | UNIQUE<br>2 1<br> |  | compare=trim |
| OK | `de8812f22a7da1b2` | `03_modules\SIM-07-equation-solving.md#2` | equation-poly-bisect | 1.4142135624 0.0000000000<br> | 1.4142135624 0.0000000000<br> |  | compare=trim |
| OK | `de8812f22a7da1b2` | `03_modules\SIM-07-equation-solving.md#2` | equation-poly-eval | 10.0000000000<br> | 10.0000000000<br> |  | compare=trim |
| OK | `de8812f22a7da1b2` | `03_modules\SIM-07-equation-solving.md#2` | equation-quadratic-formula | 2<br>1.0000000000<br>2.0000000000<br> | 2<br>1.0000000000<br>2.0000000000<br> |  | compare=trim |
| OK | `de8812f22a7da1b2` | `03_modules\SIM-07-equation-solving.md#2` | equation-real-gauss-unique | UNIQUE<br>2.0000000000 1.0000000000<br> | UNIQUE<br>2.0000000000 1.0000000000<br> |  | compare=trim |
| OK | `e22beec204dd1b2d` | `03_modules\CPP-004-queues-stacks-heaps.md#1` | queue-stack-heap | 5 1<br>4<br> | 5 1<br>4<br> |  | compare=trim |
| OK | `e2dced9066806ba7` | `03_modules\CPP-10-io-formatting.md#16` | fast-read-write-llong-min | -9223372036854775808<br> | -9223372036854775808<br> |  | compare=trim |
| OK | `e2dced9066806ba7` | `03_modules\CPP-10-io-formatting.md#16` | fast-read-write-sum | 60<br> | 60<br> |  | compare=trim |
| OK | `ebde4ba113df005b` | `03_modules\CPP-009-common-re-wa-pitfalls.md#1` | common-pitfall-max | 30<br> | 30<br> |  | compare=trim |
| OK | `eeb5dca6532a1415` | `03_modules\DS-07-stl-first-data-structures.md#2` | stl-first-data-structures-compile-run |  |  |  | compare=trim |
| OK | `f280b020bc5c4f0f` | `03_modules\BRUTE-09-map-tuple-memo.md#2` | map-tuple-memo-knapsack | 12<br> | 12<br> |  | compare=trim |
| OK | `f32e645bb4313fe6` | `03_modules\OPS-00-unified-protocols.md#1` | unified-skeleton-empty |  |  |  | compare=trim |
| OK | `f56e5cffc4ce51a6` | `03_modules\BRUTE-11-bfs-state-search.md#4` | key-grid-bfs-basic | 5<br> | 5<br> |  | compare=trim |
| OK | `f56e5cffc4ce51a6` | `03_modules\BRUTE-11-bfs-state-search.md#4` | key-grid-bfs-missing-target | -1<br> | -1<br> |  | compare=trim |
| OK | `f5b807c2b7a148b4` | `03_modules\CPP-013-stl-containers-reference.md#1` | stl-containers-basic | 2 1<br>bc<br> | 2 1<br>bc<br> |  | compare=trim |
| OK | `f8f666e9f9d4b8fb` | `03_modules\CPP-10-io-formatting.md#12` | scanf-printf-sum | 60<br> | 60<br> |  | compare=trim |
| OK | `f927d774ff4a71bd` | `03_modules\AI-15-reverse-mode-autodiff.md#2` | autodiff-reverse-mode-sin | 6.909297<br>2.583853 2.000000<br> | 6.909297<br>2.583853 2.000000<br> |  | compare=trim |
